# watcloud-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/watcloud_utils/: env.py  fastapi.py  logging.py  sentry.py  typer.py
tests/: test_sanity.py
watcloud_utils/: sentry.py
